--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <table align="center" style="margin:auto;" cellspacing="20px">
-      <td><img src="images/R.png" alt="Profile Picture" width="200" height="200"></td>
+      <td><img src="images/r.png" alt="Profile Picture" width="200" height="200"></td>
       <td>
         <h1>Rajendra Amratlal</h1>
         <p><em>Flow Room Specialist for <strong><a href="https://www.vfc.com/">VF Corporation</a></strong></em></p>
